--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.29.0",
+    "@emotion/react": "^11.14.0",
     "@tailwindcss/vite": "^4.1.17",
     "aos": "^2.3.4",
     "axios": "^1.13.2",
