--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router": "^7.9.5",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
+    "react-type-animation": "^3.2.0",
     "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.17"
   },
