--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "react": "^19.1.1",
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "react-type-animation": "^3.2.0",
+    "recharts": "^3.6.0",
     "sweetalert2": "^11.26.3",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
